# narsil

./: .gitignore  Cargo.toml  README.md  build.rs
aur/narsil/: PKGBUILD
aur/narsil-bin/: PKGBUILD
aur/narsil-nvidia/: PKGBUILD
aur/narsil-nvidia-bin/: PKGBUILD
docs/: CNAME  index.html  robots.txt  site.css  site.js  sitemap.xml
docs/assets/fonts/: fonts.css
locales/: README.md  de.toml  en.toml  es.toml  fr.toml
scripts/: build-appimage.sh  deploy-aur.sh  release-github.sh  release.sh
src/: app.rs  i18n.rs  main.rs  ui.rs
src/metrics/: cpu.rs  disks.rs  memory.rs  mod.rs  network.rs  processes.rs
src/metrics/gpu/: amd.rs  intel.rs  macos_intel.rs  mod.rs  nvidia.rs  windows_amd.rs  windows_intel.rs
src/tests/: cpu.rs  disks.rs  gpu.rs  helpers.rs  i18n.rs  memory.rs  mod.rs  network.rs  processes.rs  push_history.rs  split_gauge.rs
src/ui/: helpers.rs  mod.rs  statusbar.rs  tab_bar.rs
src/ui/tabs/: cpu.rs  disks.rs  gpu.rs  memory.rs  mod.rs  network.rs  overview.rs  processes.rs
src/ui/widgets/: mod.rs  split_gauge.rs
