[package]
name = "narsil"
version = "0.3.1"
edition = "2024"
rust-version = "1.85"
authors = ["Raimo Geisel"]
description = "A terminal-based system resource monitor — GPU-aware, Braille charts, per-char label inversion"
license = "GPL-3.0-only"
repository = "https://github.com/Pommersche92/narsil"
homepage = "https://shards-of-narsil.app"
readme = "README.md"
keywords = ["system-monitor", "tui", "terminal", "ratatui", "gpu"]
categories = ["command-line-utilities", "visualization"]
build = "build.rs"

[features]
# Enable NVIDIA GPU monitoring via NVML (requires NVIDIA drivers at link time)
nvidia = ["dep:nvml-wrapper"]

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
sysinfo = "0.38"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
sys-locale = "0.3"
nvml-wrapper = { version = "0.12", optional = true }

[[bin]]
name = "narsil"
path = "src/main.rs"
